# KartoffelChess

./: README.md
src/: CMakeLists.txt  Communication.cpp  Communication.h  Engine.cpp  Engine.h  Evaluation.cpp  Evaluation.h  Game.cpp  Game.h  MagicBitboards.cpp  MagicBitboards.h  Move.h  NeuralNet.cpp  NeuralNet.h  Search.cpp  Search.h  Test.cpp  Test.h  Trainer.cpp  Trainer.h  TrainingsData.cpp  TrainingsData.h  constants.h  magicConstants.h  main.cpp
src/Communication/: Communication.cpp  Communication.h  Writer.cpp  Writer.h
src/Engine/: Engine.cpp  Engine.h  Evaluation.cpp  Evaluation.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h
src/Evaluation/: Evaluation.cpp  Evaluation.h  NeuralNet.cpp  NeuralNet.h  StaticEvaluation.h
src/Game/: Game.cpp  Game.h  Move.h
src/KITest/: KiTrainer.cpp  KiTrainer.h
src/Search/: Engine.cpp  Engine.h  MoveOrderer.cpp  MoveOrderer.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h
src/Tests/: GameTest.cpp  SearchTest.cpp  Test.cpp  Test.h
src/Tuner/: Tuner.cpp  Tuner.h  parameters.cpp  parameters.h
